# MyCommander

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  lefthook.yml  package-lock.json  package.json  version-sync.cjs  version-sync.js  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: apply_batch_rename.toml  cancel_job.toml  cancel_zip_operation.toml  check_copy_conflicts.toml  clear_finished_jobs.toml  compare_directories.toml  copy_files.toml  create_directory.toml  create_file.toml  create_zip.toml  create_zip_from_paths.toml  delete_files.toml  extract_zip.toml  get_available_space.toml  get_dir_size.toml  get_drives.toml  get_git_status.toml  get_home_dir.toml  list_directory.toml  list_jobs.toml  move_files.toml  open_file.toml  open_in_terminal.toml  read_file_content.toml  rename_file.toml  resolve_path.toml  retry_job.toml  run_shell_command.toml  search_files.toml  set_show_hidden_menu_checked.toml  set_theme_menu_selection.toml  set_view_mode_menu_selection.toml  show_context_menu.toml  submit_job.toml  sync_watched_directories.toml  write_files_to_pasteboard.toml
src-tauri/src/: app_menu.rs  app_menu_events.rs  lib.rs  main.rs
src-tauri/src/commands/: drag_commands.rs  file_watch_commands.rs  fs_commands.rs  git_commands.rs  job_commands.rs  mod.rs  search_commands.rs  search_commands_tests.rs  sync_commands.rs  sync_commands_tests.rs  system_commands.rs
src-tauri/src/commands/fs/: mod.rs  (+6 more)
(+300 files in other folders)
