[package]
name = "mycommander"
version = "1.1.34"
description = "MyCommander desktop file manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
trash = "5.2.5"
open = "5.3.3"
glob = "0.3.3"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
regex = "1.12.3"
dirs = "6.0.0"
sysinfo = "0.33.1"
tauri-plugin-drag = "2.1.0"
tauri-plugin-window-state = "2"
notify = "8.2.0"
encoding_rs = "0.8.35"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[lints.rust]
unexpected_cfgs = { level = "allow" }
